🚧 升级 vue、vuetify 等至 version3

--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -4,6 +4,12 @@ html {
   overflow-y: auto;
 }
 
+#app {
+  width: 100vw;
+  height: 100vh;
+  position: relative;
+}
+
 .fill-width {
   width: 100%;
 }
